fix(ci): Fix image output format in workflow
- Change image output format from docker to oci for ecp-ai and trace-exchanger services

--- a/.github/workflows/trace-exchanger.yml
+++ b/.github/workflows/trace-exchanger.yml
@@ -89,4 +89,4 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         file: trace-exchanger/Dockerfile
         context: trace-exchanger
-        outputs: type=docker,dest=/tmp/trace-exchanger.tar
+        outputs: type=oci,dest=/tmp/trace-exchanger.tar
