--- a/.github/workflows/ecp-ai.yml
+++ b/.github/workflows/ecp-ai.yml
@@ -98,4 +98,4 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         file: ecp-ai/Dockerfile
         context: ecp-ai
-        outputs: type=docker,dest=/tmp/ecp-ai.tar
+        outputs: type=oci,dest=/tmp/ecp-ai.tar
