--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ on:
       - "*"
 
 jobs:
-  docker:
-    runs-on: ubuntu-22.04-arm
+  wait:
+    runs-on: ubuntu-22.04
     steps:
       - name: Wait for the build ecp-ai workflow to complete
         uses: lewagon/wait-on-check-action@v1.4.0
@@ -39,7 +39,11 @@ jobs:
           check-regexp: '^build emqxee-agent.*'
           wait-interval: 10
           allowed-conclusions: success,skipped,cancelled
-          
+  
+  docker:
+    runs-on: ubuntu-22.04-arm
+    needs: wait
+    steps:          
       # GitHub App token 有效期固定为1小时，无法修改
       # 如果工作流运行时间超过1小时，需要在使用时重新生成token
       - uses: actions/create-github-app-token@v1
@@ -207,7 +211,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-14
+          - macos-15
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/create-github-app-token@v1
@@ -250,6 +254,7 @@ jobs:
           GIT_TOKEN: ${{ steps.generate-token.outputs.token }}
           DASHBOARD_VERSION: ${{ github.ref_name }}
           ALL_IN_ONE: true
+        working-directory: ./ecp-main
         run: make pkg_all_in_one
 
       - uses: actions/upload-artifact@v4
