--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/checkout@v4
         with:
-          repository: emqxecp/trace-exchanger
+          repository: emqx/EMQX-Business-Critical
           ref: ${{ github.ref }}
           path: ecp-main
           fetch-depth: 0
@@ -127,7 +127,6 @@ jobs:
           cache: true
           version: v0.57.1
       - name: Run Trivy scanner of ecp-main on tag
-        if: github.ref_type == 'tag'
         run: |
           trivy image --severity CRITICAL,HIGH `echo ${{ steps.meta.outputs.tags }} | tail -n1` --output ./trivy-report.txt
 
@@ -153,7 +152,6 @@ jobs:
           fi
       - name: Get dependency images
         id: get-dependency-images
-        if: github.ref_type == 'tag'
         working-directory: ./ecp-main
         run: |
           cd deployments/docker-compose
@@ -163,13 +161,11 @@ jobs:
           done <<< "$(echo -e '\n\n' | ./emqx_ecp_ctl configure --show-images | grep -v 'ecp-main' | tail -n +3)"
           echo 'EOF' >> $GITHUB_OUTPUT
       - name: Download dependency images
-        if: github.ref_type == 'tag'
         run: |
           while read -r image; do
             docker pull $image
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
       - name: Run Trivy scanner of dependency images
-        if: github.ref_type == 'tag'
         run: |
           set -xv
           echo "" > ./trivy-report.txt
@@ -180,7 +176,6 @@ jobs:
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
       - name: Retag dependency images
         id: retag-dependency-images
-        if: github.ref_type == 'tag'
         run: |
           echo 'images<<EOF' >> $GITHUB_OUTPUT
           while read -r image; do
@@ -190,7 +185,6 @@ jobs:
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
           echo 'EOF' >> $GITHUB_OUTPUT
       - uses: ./.github/actions/push-images-to-acr
-        if: github.ref_type == 'tag'
         with:
           acr-login-server: ghcr.io
           acr-username: ${{ github.actor }}
@@ -198,7 +192,6 @@ jobs:
           tags: ${{ steps.retag-dependency-images.outputs.images }}
           skip-login: 'true'
       - name: Upload Trivy report
-        if: github.ref_type == 'tag'
         uses: actions/upload-artifact@v4
         with:
           name: trivy-reports
@@ -207,7 +200,6 @@ jobs:
 
 
   build-macos:
-    if: github.ref_type == 'tag'
     strategy:
       matrix:
         os:
@@ -240,7 +232,13 @@ jobs:
         with:
           fetch-tags: true
           ref: ${{ github.ref }}
-
+      - uses: actions/checkout@v4
+        with:
+          repository: emqx/EMQX-Business-Critical
+          ref: ${{ github.ref }}
+          path: ecp-main
+          fetch-depth: 0
+          token: ${{ secrets.EMQXECP_GIT_TOKEN }}
 
       - name: Set up Go
         id: go
@@ -254,7 +252,7 @@ jobs:
           GIT_TOKEN: ${{ steps.generate-token.outputs.token }}
           DASHBOARD_VERSION: ${{ github.ref_name }}
           ALL_IN_ONE: true
-        working-directory: ./ecp-main
+        working-directory: ecp-main
         run: make pkg_all_in_one
 
       - uses: actions/upload-artifact@v4
@@ -266,7 +264,6 @@ jobs:
 
 
   build-ubuntu:
-    if: github.ref_type == 'tag'
     strategy:
       matrix:
         os:
@@ -297,7 +294,13 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
-        
+      - uses: actions/checkout@v4
+        with:
+          repository: emqx/EMQX-Business-Critical
+          ref: ${{ github.ref }}
+          path: ecp-main
+          fetch-depth: 0
+          token: ${{ secrets.EMQXECP_GIT_TOKEN }}
 
       - name: Set up Go
         id: go
@@ -311,7 +314,7 @@ jobs:
           GIT_TOKEN: ${{ steps.generate-token.outputs.token }}
           DASHBOARD_VERSION: ${{ github.ref_name }}
           ALL_IN_ONE: true
-        working-directory: ./ecp-main
+        working-directory: ecp-main
         run: make pkg_all_in_one
       
       - name: Check Docker Compose command version
@@ -357,8 +360,7 @@ jobs:
           if-no-files-found: error 
 
   release:
-    if: github.ref_type == 'tag'
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04-arm
     needs:
       - build-ubuntu
       - build-macos
@@ -406,8 +408,8 @@ jobs:
           ## This prevents you from accidentally creating recursive workflow runs.
           ## More info: https://docs.github.com/en/actions/using-workflows/triggering-a-workflow#triggering-a-workflow-from-a-workflow
           token: ${{ github.token }}
-          name: ECP application ${{ github.ref_name }} Released
-          body: ECP application ${{ github.ref_name }} has been released
+          name: ECP application arm64 version ${{ github.ref_name }} Released
+          body: ECP application arm64 version ${{ github.ref_name }} has been released
           prerelease: ${{ steps.prerelease.outputs.prerelease }}
           generate_release_notes: true
           files: |
