fix(ci): Fix GitHub Actions token usage
- Change Git token from secrets.EMQXECP_GIT_TOKEN to steps.generate-token.outputs.token
- Uniformly update token configs in multiple jobs
- Prevent permission issues from inconsistent token usage
- Ensure dynamic generation and secure management of credentials in CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
           ref: ${{ github.ref }}
           path: ecp-main
           fetch-depth: 0
-          token: ${{ secrets.EMQXECP_GIT_TOKEN }}
+          token: ${{ steps.generate-token.outputs.token }}
       - name: Docker image tag
         id: image
         working-directory: ecp-main
@@ -238,7 +238,7 @@ jobs:
           ref: ${{ github.ref }}
           path: ecp-main
           fetch-depth: 0
-          token: ${{ secrets.EMQXECP_GIT_TOKEN }}
+          token: ${{ steps.generate-token.outputs.token }}
 
       - name: Set up Go
         id: go
@@ -300,7 +300,7 @@ jobs:
           ref: ${{ github.ref }}
           path: ecp-main
           fetch-depth: 0
-          token: ${{ secrets.EMQXECP_GIT_TOKEN }}
+          token: ${{ steps.generate-token.outputs.token }}
 
       - name: Set up Go
         id: go
