--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -228,11 +228,11 @@ jobs:
           echo "GONOPROXY=github.com/emqx/*" >> $GITHUB_ENV
           echo "GONOSUMDB=github.com/emqx/*" >> $GITHUB_ENV
 
+      # - uses: actions/checkout@v4
+      #   with:
+      #     fetch-tags: true
+      #     ref: ${{ github.ref }}
       - uses: actions/checkout@v4
-        with:
-          fetch-tags: true
-          ref: ${{ github.ref }}
-      - uses: actions/checkout@v3
         with:
           repository: emqx/EMQX-Business-Critical
           ref: ${{ github.ref }}
