chore(ci): Update Git in release workflow
- Add step to upgrade Git via brew on macOS
- Update actions/checkout from v3 to v4
- Optimize repo fetch for latest Git support

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -232,7 +232,9 @@ jobs:
       #   with:
       #     fetch-tags: true
       #     ref: ${{ github.ref }}
-      - uses: actions/checkout@v3
+      - name: Upgrade Git
+        run: brew upgrade git  # macOS 用 brew 升级
+      - uses: actions/checkout@v4
         with:
           repository: emqx/EMQX-Business-Critical
           ref: ${{ github.ref }}
