chore(workflow): Comment macOS build deps
- Comment out build-macos job dependencies in release.yml
- Keep other build dependencies unchanged
- Temporarily skip macOS build; retain other release workflow logic

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -267,6 +267,7 @@ jobs:
 
 
   build-ubuntu:
+    
     strategy:
       matrix:
         os:
@@ -366,7 +367,7 @@ jobs:
     runs-on: ubuntu-22.04-arm
     needs:
       - build-ubuntu
-      - build-macos
+      # - build-macos
       - docker
     steps:
       - uses: actions/checkout@v4
