ci(workflow): Add emqx-ecp-web workflow & wait
- Add .github/workflows/ecp-web.yml for auto-building/pushing emqx-ecp-web image
- Use GitHub App Token for auth and code pull
- Support image tags from branches/tags (including semver)
- Integrate Docker metadata-action & build-push-action for build/release
- Add emqx-ecp-web build wait step in release.yml to ensure dependency order

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,15 @@ jobs:
           check-regexp: '^build emqxee-agent.*'
           wait-interval: 10
           allowed-conclusions: success,skipped,cancelled
+
+      - name: Wait for the build emqx-ecp-web workflow to complete
+        uses: lewagon/wait-on-check-action@v1.4.0
+        with:
+          ref: ${{ github.sha }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          check-name: 'build emqx-ecp-web'
+          wait-interval: 10
+          allowed-conclusions: success,skipped,cancelled
   
   docker:
     runs-on: ubuntu-22.04-arm
