ci(workflow): Update Docker img to ecp-ui
- Change Docker image name from emqx-bc-web to ecp-ui
- Keep other configurations unchanged
- Adapt new image name to meet project needs

--- a/.github/workflows/ecp-web.yml
+++ b/.github/workflows/ecp-web.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: docker/metadata-action@v4
       id: meta
       with:
-        images: ghcr.io/emqxecp/emqx-bc-web
+        images: ghcr.io/emqxecp/ecp-ui
         flavor: |
           latest=${{ steps.latest.outputs.latest }}
         tags: |
