--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -174,6 +174,10 @@ jobs:
       - name: Download dependency images
         run: |
           while read -r image; do
+            if [[ "$image" == "docker.io/emqx/nanomq*" ]]; then
+              docker pull $image
+              docker tag $image ghcr.io/emqxecp/nanomq:${image#docker.io/emqx/nanomq:}
+            fi
             docker pull $image
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
       - name: Run Trivy scanner of dependency images
