ci(workflow): Push NanoMQ img in release
- Add `docker push` to NanoMQ image section in release.yml
- Ensure built NanoMQ images are pushed to ghcr.io
- Improve release automation for sync image updates
- Avoid omissions from manual image pushes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -177,6 +177,7 @@ jobs:
             if [[ "$image" == "docker.io/emqx/nanomq*" ]]; then
               docker pull $image
               docker tag $image ghcr.io/emqxecp/nanomq:${image#docker.io/emqx/nanomq:}
+              docker push ghcr.io/emqxecp/nanomq:${image#docker.io/emqx/nanomq:}
             fi
             docker pull $image
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
