fix(ci): Fix image script output in release
- Add image name output in list processing for debugging/tracking
- Correct parentheses/quotes in conditionals to boost script compatibility
- Add new image name output prompt for change confirmation
- Keep other logic unchanged to ensure normal release flow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -165,7 +165,8 @@ jobs:
           cd deployments/docker-compose
           echo 'images<<EOF' >> $GITHUB_OUTPUT
           while read -r image; do
-            if [[ "$image" == "docker.io/emqx/nanomq*" ]]; then
+            echo "$image"
+            if [[ $image == docker.io/emqx/nanomq* ]]; then
               docker pull $image
               docker tag $image ghcr.io/emqxecp/nanomq:${image#docker.io/emqx/nanomq:}
               docker push ghcr.io/emqxecp/nanomq:${image#docker.io/emqx/nanomq:}
@@ -174,6 +175,7 @@ jobs:
             if [[ $image == docker.io/emqx/* ]]; then
               image="ghcr.io/emqxecp/${image#docker.io/emqx/}"
             fi
+            echo "new image => $image"
             echo "$image" >> $GITHUB_OUTPUT
           done <<< "$(echo -e '\n\n' | ./emqx_ecp_ctl configure --show-images | grep -v 'ecp-main' | tail -n +3)"
           echo 'EOF' >> $GITHUB_OUTPUT
