chore(workflow): Comment offline image artifact download
- Comment and disable the artifact download step for offline images in the release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -327,10 +327,10 @@ jobs:
           pattern: packages-*
           merge-multiple: true
           path: packages
-      - uses: actions/download-artifact@v4
-        with:
-          name: image-packages
-          path: packages
+      # - uses: actions/download-artifact@v4
+      #   with:
+      #     name: image-packages
+      #     path: packages
       - uses: actions/download-artifact@v4
         with:
           pattern: trivy-reports
