fix(github): Correct Docker Compose path in release
- Adjust working directory for Docker Compose commands in release.yml to correct path
- Fix build step failure caused by incorrect directory path
- Keep other release workflow configs unchanged to improve deployment stability

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -337,7 +337,7 @@ jobs:
           merge-multiple: true
           path: trivy-reports
       - name: Check Docker Compose command version
-        working-directory: deployments/docker-compose
+        working-directory: ./ecp-main/deployments/docker-compose
         run: |
           CURRENT_TAG="${GITHUB_REF##*/}"
           
