--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -336,8 +336,16 @@ jobs:
           pattern: trivy-reports
           merge-multiple: true
           path: trivy-reports
+      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          repository: emqx/EMQX-Business-Critical
+          ref: ${{ github.ref }}
+          path: ecp-main
+          fetch-depth: 0
+          token: ${{ steps.generate-token.outputs.token }}
       - name: Check Docker Compose command version
-        working-directory: ./ecp-main/deployments/docker-compose
+        working-directory: ecp-main/deployments/docker-compose
         run: |
           CURRENT_TAG="${GITHUB_REF##*/}"
           
