chore(workflows): Update GH Actions auth to App token
- Replace checkout with create-github-app-token to generate GH App token
- Configure app-id, private-key, owner, repositories for token generation
- Keep repo params of subsequent checkout unchanged
- Improve automation security and permission management

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -336,7 +336,13 @@ jobs:
           pattern: trivy-reports
           merge-multiple: true
           path: trivy-reports
-      - uses: actions/checkout@v4
+      - uses: actions/create-github-app-token@v1
+        id: generate-token
+        with:
+          app-id: ${{ vars.AUTH_APP_ID }}
+          private-key: ${{ secrets.AUTH_APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
+          repositories: EMQX-Business-Critical
       - uses: actions/checkout@v4
         with:
           repository: emqx/EMQX-Business-Critical
