--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -167,9 +167,13 @@ jobs:
           cd deployments/docker-compose
           echo 'images<<EOF' >> $GITHUB_OUTPUT
           while read -r image; do
+            # 排除指定镜像
+            if [[ "$image" =~ ^(trace-exchanger|ecp-emqx-agent-downloader|ecp-emqx-agent|ecp-ai|ecp-main|ecp-ui)$ ]]; then
+              continue
+            fi
             echo "$image"
             echo "$image" >> $GITHUB_OUTPUT
-          done <<< "$(echo -e '\n\n' | ./emqx_ecp_ctl configure --show-images | grep -v 'ecp-main' | tail -n +3)"
+          done <<< "$(echo -e '\n\n' | ./emqx_ecp_ctl configure --show-images | tail -n +3)"
           echo 'EOF' >> $GITHUB_OUTPUT
       - name: Download dependency images
         run: |
