--- a/.github/workflows/trace-exchanger.yml
+++ b/.github/workflows/trace-exchanger.yml
@@ -66,13 +66,15 @@ jobs:
         sudo rm -rf /var/log/*
         sudo rm -rf /var/cache/*
         echo "Disk cleanup completed."
+    - uses: docker/setup-qemu-action@v3
+    - uses: docker/setup-buildx-action@v3
     - name: Build image
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v5
       with:
         push: true
-        load: ${{ contains(github.ref_name, 'customer') }}
         build-args: |
           GIT_TOKEN=${{ secrets.CI_GIT_TOKEN }}
+        platforms: linux/amd64,linux/arm64
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         file: trace-exchanger/Dockerfile
