--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,20 @@ jobs:
           allowed-conclusions: success,skipped,cancelled
   
   docker:
-    runs-on: ubuntu-22.04-arm
+    strategy:
+      matrix:
+        arch:
+          - ubuntu-22.04
+          - ubuntu-22.04-arm
+        # Add platform information
+        include:
+          - arch: ubuntu-22.04
+            platform: linux/amd64
+            suffix_platform: amd64
+          - arch: ubuntu-22.04-arm
+            platform: linux/arm64
+            suffix_platform: arm64
+    runs-on: ${{ matrix.arch }}
     needs: wait
     steps:          
       # GitHub App token 有效期固定为1小时，无法修改
@@ -114,33 +127,34 @@ jobs:
             type=raw,value=${{ steps.image.outputs.tag }},enabled=${{ github.ref_type != 'tag' }}
             type=semver,pattern={{version}},enabled=${{ github.ref_type == 'tag' }}
             type=semver,pattern={{major}}.{{minor}},enabled=${{ github.ref_type == 'tag' }}
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.EMQXECP_GIT_TOKEN }}
-      - uses: docker/build-push-action@v5
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v3
         with:
           context: ./ecp-main
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          # tags: ${{ steps.meta.outputs.tags }}
           build-args: |
             GIT_TOKEN=${{ steps.generate-token.outputs.token }}
+          labels: ${{ steps.meta.outputs.labels }}
           file: ecp-main/build/docker_build/Dockerfile
-      - name: Manual Trivy Setup
-        uses: aquasecurity/setup-trivy@v0.2.0
-        with:
-          cache: true
-          version: v0.57.1
-      - name: Run Trivy scanner of ecp-main on tag
+          platforms: ${{ matrix.platform }}
+          outputs: type=image,name=ghcr.io/emqxecp/ecp-main,push-by-digest=true,name-canonical=true
+          # Disable attestation to avoid conflicts with digest-based pushing
+          provenance: false
+
+      - name: Export ecp-main digest
         run: |
-          trivy image --severity CRITICAL,HIGH `echo ${{ steps.meta.outputs.tags }} | tail -n1` --output ./trivy-report.txt
-
-
+          echo "${{ steps.build.outputs.digest }}" > ecp-main-digest.txt
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ecp-main-digest-${{ matrix.suffix_platform }}
+          path: ecp-main-digest.txt
 
       - name: Check Docker Compose command version
         working-directory: ./ecp-main/deployments/docker-compose
@@ -189,13 +203,17 @@ jobs:
             echo "\n\n\n $image trivy report:\n" >> ./trivy-report.txt
             cat ./trivy-report-temp.txt >> ./trivy-report.txt
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
-      - name: Mirror dependency images to ghcr as multi-arch manifests
+      - name: Collect dependency image digests
         run: |
+          > dependency-digests.txt
           while read -r image; do
-            target=ghcr.io/emqxecp/${image##*/}
-            echo "Mirroring $image -> $target"
-            docker buildx imagetools create -t $target $image
+            rd=$(docker inspect --format='{{index .RepoDigests 0}}' $image)
+            echo "$image $rd" >> dependency-digests.txt
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dependency-digests-${{ matrix.suffix_platform }}
+          path: dependency-digests.txt
       - name: Upload Trivy report
         uses: actions/upload-artifact@v4
         with:
@@ -206,9 +224,18 @@ jobs:
   build-ubuntu:
     strategy:
       matrix:
-        os:
+        arch:
+          - ubuntu-22.04
           - ubuntu-22.04-arm
-    runs-on: ${{ matrix.os }}
+        # Add platform information
+        include:
+          - arch: ubuntu-22.04
+            platform: linux/amd64
+            suffix_platform: amd64
+          - arch: ubuntu-22.04-arm
+            platform: linux/arm64
+            suffix_platform: arm64
+    runs-on: ${{ matrix.arch }}
     steps:
       - uses: actions/create-github-app-token@v1
         id: generate-token
@@ -282,28 +309,100 @@ jobs:
       - name: Package of docker compose
         working-directory: ./ecp-main/deployments
         run: |
-          cp -f ./scripts/emqx_ecp.conf.arm64 ./docker-compose/emqx_ecp.conf
+          if [ "${{ matrix.suffix_platform }}" = "arm64" ]; then
+            cp -f ./scripts/emqx_ecp.conf.arm64 ./docker-compose/emqx_ecp.conf
+          fi
           version=$(echo ${{ github.ref_name }} | sed 's|[/:_]|-|g')
           tar \
             --exclude="docker-compose/.gitingore" \
             --exclude="docker-compose/configs" \
             --exclude="docker-compose/datavolumes" \
-            -zcvf emqx-ecp-arm64-docker-compose-installer-${version}.tar.gz \
+            -zcvf emqx-ecp-${{ matrix.suffix_platform }}-docker-compose-installer-${version}.tar.gz \
             docker-compose
 
       - uses: actions/upload-artifact@v4
         with:
-          name: packages-${{ matrix.os }}
+          name: packages-${{ matrix.suffix_platform }}
           path: |
-            ./ecp-main/deployments/emqx-ecp-arm64-docker-compose-installer*
+            ./ecp-main/deployments/emqx-ecp-${{ matrix.suffix_platform }}-docker-compose-installer*
             ./ecp-main/emqx-bc-service-in-one-${{ github.ref_name }}*
           if-no-files-found: error 
+
+  manifest:
+    runs-on: ubuntu-22.04
+    needs:
+      - docker
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.EMQXECP_GIT_TOKEN }}
+      - name: Docker image tag
+        id: image
+        run: |
+          tag="${GITHUB_REF##*/}"
+          if [[ "${{github.event_name}}" == "push" ]] && [[ ${{ github.ref_name }} == "develop" ]]; then
+              tag="dev-latest"
+          fi
+          echo "tag=${tag}" >> $GITHUB_OUTPUT
+          echo 'registry="ghcr.io/emqxecp/ecp-main"' >> $GITHUB_OUTPUT
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: |
+            ${{ steps.image.outputs.registry }}
+          tags: |
+            type=raw,value=${{ steps.image.outputs.tag }},enabled=${{ github.ref_type != 'tag' }}
+            type=semver,pattern={{version}},enabled=${{ github.ref_type == 'tag' }}
+            type=semver,pattern={{major}}.{{minor}},enabled=${{ github.ref_type == 'tag' }}
+      - uses: actions/download-artifact@v4
+        with:
+          name: ecp-main-digest-amd64
+          path: ecp-main-digest-amd64
+      - uses: actions/download-artifact@v4
+        with:
+          name: ecp-main-digest-arm64
+          path: ecp-main-digest-arm64
+      - name: Create and push multi-arch manifest for ecp-main
+        run: |
+          amd64=$(cat ecp-main-digest-amd64/ecp-main-digest.txt)
+          arm64=$(cat ecp-main-digest-arm64/ecp-main-digest.txt)
+          for tag in ${{ steps.meta.outputs.tags }}; do
+            docker buildx imagetools create -t "$tag" \
+              ghcr.io/emqxecp/ecp-main@${amd64} \
+              ghcr.io/emqxecp/ecp-main@${arm64}
+          done
+      - uses: actions/download-artifact@v4
+        with:
+          name: dependency-digests-amd64
+          path: dep-amd64
+      - uses: actions/download-artifact@v4
+        with:
+          name: dependency-digests-arm64
+          path: dep-arm64
+      - name: Create and push multi-arch manifests for dependencies
+        run: |
+          declare -A MAP
+          while read -r image digest; do
+            MAP["$image"]+=" ${digest}"
+          done < dep-amd64/dependency-digests.txt
+          while read -r image digest; do
+            MAP["$image"]+=" ${digest}"
+          done < dep-arm64/dependency-digests.txt
+          for image in "${!MAP[@]}"; do
+            target=ghcr.io/emqxecp/${image##*/}
+            set -- ${MAP["$image"]}
+            docker buildx imagetools create -t "$target" "$1" "$2"
+          done
 
   release:
     runs-on: ubuntu-22.04-arm
     needs:
       - build-ubuntu
       - docker
+      - manifest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -360,8 +459,8 @@ jobs:
           ## This prevents you from accidentally creating recursive workflow runs.
           ## More info: https://docs.github.com/en/actions/using-workflows/triggering-a-workflow#triggering-a-workflow-from-a-workflow
           token: ${{ github.token }}
-          name: ECP application arm64 version ${{ github.ref_name }} Released
-          body: ECP application arm64 version ${{ github.ref_name }} has been released
+          name: ECP application new version ${{ github.ref_name }} Released
+          body: ECP application new version ${{ github.ref_name }} has been released
           prerelease: ${{ steps.prerelease.outputs.prerelease }}
           generate_release_notes: true
           files: |
