--- a/.github/workflows/ecp-web.yml
+++ b/.github/workflows/ecp-web.yml
@@ -122,12 +122,7 @@ jobs:
           flavor: |
             latest=${{ steps.latest.outputs.latest }}
           tags: |
-            type=raw,enable=${{ contains(github.ref_name, 'customer') }},value=${{ steps.customer.outputs.tag }}
-            type=ref,event=branch,enable=${{ !contains(github.ref_name, 'customer') }}
-            type=ref,event=pr,enable=${{ !contains(github.ref_name, 'customer') }}
-            type=ref,event=tag,enable=${{ !contains(github.ref_name, 'customer') }}
-            type=semver,pattern={{version}},enable=${{ !contains(github.ref_name, 'customer') }}
-            type=semver,pattern={{major}}.{{minor}},enable=${{ !contains(github.ref_name, 'customer') }}
+            type=ref,event=tag,enable=true
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
